--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -1,44 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Django</title>
-  </head>
-  <body>
-    {% if name %}
-      <h1>hello {{ name }}</h1>
-    {% else %}
-      <h1>hello Storefront</h1>
-    {% endif %}
-    <ul>
-      {% for membership in  membership %}
-        <li>{{ membership.first_name}}</li>
-        {% endfor %}
-      
-    </ul>
-   
-      
-      <table>
-        <tr>
-          <th>First Name</th>
-          <th>Last Name</th>
-          <th>Email</th>
-          <th>Phone</th>
-          <th>Birth Date</th>
-          <th>Membership</th>
-        </tr>
-         {% for customer in customer %}
-        <tr style="color: blue;">
-          <td>{{ customer.first_name }}</td>
-          <td>{{ customer.last_name }}</td>
-          <td><a href="mailto:{{ customer.email }}" style="text-decoration: none;">{{ customer.email }}</a></td>
-          <td>{{ customer.phone }}</td>
-          <td>{{ customer.birth_date }}</td>
-          <td>{{ customer.membership }}</td>
-        </tr>
-          {% endfor %}
-      </table>
-  
-  </body>
-</html>
+<h1>hello</h1>
